# DemoEmbededPython

./: CMakeLists.txt  README.md  main.cpp
pyscript/: inverse_sigma.py
